--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,273 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background: white;
+  color: black;
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+}
+
+h2 {
+  font-size: 30px;
+  line-height: 32px;
+}
+
+h3 {
+  font-size: 18px;
+  margin-top: -10px;
+}
+
+h4 {
+  font-size: 13px;
+  font-weight: 100;
+  text-align: left;
+}
+
+.container {
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.published-date {
+  font-size: 8px;
+  color: grey;
+  font-style: italic;
+  text-align: left;
+}
+
+/****************** HEADER ******************/
+
+header {
+  background: white;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  margin-top: -20px;
+  border-bottom: 2px solid #ebebeb;
+  position: fixed;
+  width: 97%;
+}
+
+.hamburger {
+  display: flex;
+  width: 32px;
+  flex-direction: column;
+  margin-right: 24px;
+  transform: translate(-50%,-50%);  
+  margin: 16px;
+}
+
+/* Hamburger Animation */
+
+.hamburger::before,
+.hamburger::after {
+  background-color: black;
+  content: '';
+  display: flex;
+  height: 4px;
+  transition: all 250ms ease-in-out;
+}
+.hamburger::before {
+  box-shadow: 0 10px 0 black;
+  margin-bottom: 16px;
+}
+.hamburger:hover::before {
+  box-shadow: 0 0 0 black;
+  transform: translateY(10px) rotate(45deg);
+}
+.hamburger:hover::after{
+  transform: translateY(-10px) rotate(-45deg);
+}
+
+/* Navigation content */
+.logo {
+  width: 100px;
+  height: 40px;
+}
+
+nav {
+  display: none;
+}
+
+nav a {
+  color: black;
+  text-decoration: none;
+  margin-left: 16px;;
+}
+
+nav a:hover {
+  color: grey;
+}
+
+/****************** WELCOME CONTAINER ******************/
+
+.welcome-container {
+  border-bottom: 2px solid #ebebeb;
+  margin: 20px;
+}
+
+.welcome-container .container {
+  padding: 50px 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.welcome-container img {
+  width: 100%;
+  padding-right: 24px;
+}
+
+.welcome-container div {
+  text-align: left;
+}
+
+.text {
+  display: none;
+}
+
+/****************** NEWS SECTION ******************/
+
+.news-container {
+  background: white;
+  color: black;
+  text-align: center;
+  padding: 24px;
+}
+
+.news {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.news a {
+  width: 100%;
+  text-decoration: none;
+  color: black;
+  box-shadow: 12px 12px 0 0 #F2F2F2;
+  margin-bottom: 32px;
+  align-items: center;
+  display: flex;
+}
+
+.news a div {
+  padding-left: 24px;
+}
+
+.news a img {
+  width: 60%;
+}
+
+/****************** FOOTER ******************/
+
+footer {
+  background: #0D0D0D;
+  color: white;
+  font-size: 12px;
+  font-weight: lighter;
+  height: 50px;
+  width: 100%;
+  text-align: end;
+  padding: 15px 10px;
+}
+
+footer p {
+  margin-right: 40px;
+}
+
+/****************** MEDIA QUERIES ******************/
+
+@media (min-width: 650px) {
+  header {
+    justify-content: space-between;
+  }
+
+  nav {
+    display: inline-block;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .welcome-container div {
+    text-align: left;
+  }
+}
+
+@media (min-width: 550px) {
+  header {
+    padding-right: inherit;
+  }
+
+  nav {
+    padding: 50px;
+  }
+
+  h3 {
+    margin-top: 0;
+  }
+  .welcome-container .container {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .welcome-container img {
+    width: 50%;
+    height: 50%;
+  }
+
+  .welcome-container .container a {
+    align-items: inherit;
+  }
+
+  .news a {
+    width: 50%;
+    flex-grow: 1;
+  }
+
+  .container a {
+    display: flex;
+  }
+
+  .shadow-box{
+    background: white no-repeat;
+  }
+  .shadow-box:hover{
+    box-shadow: 0 0 8px #ccc;
+  }
+
+}
+
+@media (min-width: 900px) {
+  .welcome-container .container {
+    flex-direction: row;
+    align-items: center;
+  }
+  
+  .welcome-container img {
+    width: 50%;
+  }
+
+  .welcome-container .container a {
+    margin-top: 50px;
+  }
+
+  .news a {
+    width: 25%;
+    flex-grow: 1;
+  }
+
+  .news a div {
+    padding: 5px 5px;
+  }
+
+  .container a {
+    display: flex;
+  }
 }
