--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,4 @@
 html {
-  background:#fff;
-  color: #000;
   scroll-behavior: smooth;
 }
 
@@ -57,7 +55,7 @@ header {
   height: 60%;
 }
 
-nav {
+.navbar-links {
   display: flex;
   align-items: center;
 }
@@ -141,16 +139,16 @@ footer {
     display: none;
   }
 
-  nav {
+  .scnd-logo {
+    display: inline;
+  }
+
+  .navbar-links {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     height: 100%;
-  }
-
-  .scnd-logo {
-    display: inline;
   }
 
   .big-news {
