--- a/code/style.css
+++ b/code/style.css
@@ -240,7 +240,7 @@ footer {
   header {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .link-desktop-navbar {
@@ -253,6 +253,7 @@ footer {
   .site-name-tablet {
     display: flex;
     justify-content: center;
+    align-items: center;
   }
 
   .site-name {
