--- a/code/style.css
+++ b/code/style.css
@@ -150,6 +150,7 @@ li {
 }
 footer img {
   width: 40px;
+  height: 30px;
 }
 .footer-text {
   align-self: flex-end;
@@ -219,6 +220,7 @@ li {
 }
 footer img {
   width: 20px;
+  height: 15px;
 }
 .footer-text {
   align-self: flex-end;
